Update analysis pipeline.

--- a/analysis-complete-case/analysis-H3-time-varying-moderators.Rmd
+++ b/analysis-complete-case/analysis-H3-time-varying-moderators.Rmd
@@ -133,6 +133,7 @@ my_list <- list(Y = -1,
                 substance_is_cigarettes_lag1 = -1,
                 cigarette_availability_lag1 = -1,
                 # Past 24 hours
+                coinflip_sum_past24hrs = -1,
                 ashamed_mean_past24hrs = -1,
                 guilty_mean_past24hrs = -1,
                 happy_mean_past24hrs = -1,
@@ -161,6 +162,7 @@ use_these_moderators <- c("ashamed_lag1",
                           "cigarette_counts_lag1",
                           "alcohol_counts_lag1",
                           "substance_is_cigarettes_lag1",
+                          "coinflip_sum_past24hrs",
                           "ashamed_mean_past24hrs",
                           "guilty_mean_past24hrs",
                           "happy_mean_past24hrs",
