--- a/analysis-complete-case/exploratory-analysis-block-level-cigarette-use.Rmd
+++ b/analysis-complete-case/exploratory-analysis-block-level-cigarette-use.Rmd
@@ -31,25 +31,47 @@ library(knitr)
 library(tidyverse)
 library(geepack)
 library(tvem)
+```
 
+```{r}
+is_dir_exist <- file.exists(file.path("analysis-complete-case", "formatted-output"))
+
+if(isFALSE(is_dir_exist)){
+  dir.create(file.path("analysis-complete-case", "formatted-output"))
+}
+
+is_dir_exist <- file.exists(file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use"))
+
+if(isFALSE(is_dir_exist)){
+  dir.create(file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use"))
+}
+```
+
+```{r}
+expit <- function(x){
+  return(exp(x)/(1 + exp(x)))
+}
+```
+
+```{r}
 dat_primary_aim <- readRDS(file = file.path(path_manipulated_data, "dat_primary_aim.rds"))
 ```
 
 ```{r}
 dat_for_analysis <- dat_primary_aim %>%
   select(participant_id, cluster_id, decision_point,
-         Y, substance_is_any_nicotine, eligibility, coinflip, is_high_effort, is_low_effort) %>% 
+         Y, substance_is_cigarettes, eligibility, coinflip, is_high_effort, is_low_effort) %>% 
   mutate(coinflip = replace(coinflip, eligibility == 0, 0),
          is_high_effort = replace(is_high_effort, eligibility == 0, 0)) %>% 
   group_by(participant_id) %>% 
-  mutate(substance_is_any_nicotine_lead1 = lead(substance_is_any_nicotine),
+  mutate(substance_is_cigarettes_lead1 = lead(substance_is_cigarettes),
          eligibility_lead1 = lead(eligibility)) %>%
   ungroup(.) %>%
   filter((decision_point >= 7) & (decision_point <= 54))
 ```
 
 
-# Marginal association between engagement in self-regulatory strategies and tobacco use on current person-block
+# Marginal association between engagement in self-regulatory strategies and cigarette use on current person-block
 
 $$
 \mathrm{logit} Pr \left( S_{i,j} = 1 \Big| I_{i, j} = 1 \right) = \beta_0 + \beta_1 X_{i,j}
@@ -58,15 +80,33 @@ $$
 ```{r}
 dat_logreg <- dat_for_analysis %>% 
   filter(eligibility == 1) %>% 
-  select(participant_id, decision_point, substance_is_any_nicotine, Y) %>%
+  select(participant_id, decision_point, substance_is_cigarettes, Y) %>%
   mutate(drop_row = if_else(!complete.cases(.), 1, 0)) %>%
   filter(drop_row == 0)
 ```
 
 ```{r}
-fit <- geeglm(substance_is_any_nicotine ~ Y, family = "binomial", data = dat_logreg, id = participant_id, waves = decision_point)
+fit <- geeglm(substance_is_cigarettes ~ Y, family = "binomial", data = dat_logreg, id = participant_id, waves = decision_point)
+```
 
-summary(fit)
+```{r}
+dat_results <- summary(fit)[["coefficients"]]
+dat_results[["LB95"]] <- dat_results$Estimate - qnorm(0.975) * dat_results$Std.err
+dat_results[["UB95"]] <- dat_results$Estimate + qnorm(0.975) * dat_results$Std.err
+
+dat_results_logodds_scale <- dat_results
+dat_results_logodds_scale %>% round(., 3)
+
+# Format output to 3 decimal places
+dat_results_logodds_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "block_level_log_odds_scale_concurrent.csv"), row.names = TRUE)
+```
+
+```{r}
+dat_results_odds_scale <- data.frame(estimate = expit(dat_results$Estimate), LB95 = expit(dat_results[["LB95"]]), UB95 = expit(dat_results[["UB95"]]))
+dat_results_odds_scale %>% round(., 3)
+
+# Format output to 3 decimal places
+dat_results_odds_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "block_level_odds_scale_concurrent.csv"), row.names = TRUE)
 ```
 
 # Estimate the prevalence
@@ -74,13 +114,13 @@ summary(fit)
 ```{r}
 dat_logreg <- dat_for_analysis %>% 
   filter(eligibility == 1) %>% 
-  select(participant_id, decision_point, substance_is_any_nicotine, Y) %>%
+  select(participant_id, decision_point, substance_is_cigarettes, Y) %>%
   mutate(drop_row = if_else(!complete.cases(.), 1, 0)) %>%
   filter(drop_row == 0)
 ```
 
 ```{r}
-fit <- geeglm(substance_is_any_nicotine ~ Y, family = "binomial", data = dat_logreg, id = participant_id, waves = decision_point)
+fit <- geeglm(substance_is_cigarettes ~ Y, family = "binomial", data = dat_logreg, id = participant_id, waves = decision_point)
 ```
 
 ```{r}
@@ -105,7 +145,7 @@ print(dat_result)
 ```
 
 ```{r, fig.height = 5, fig.width = 7}
-plot(dat_result$engaged, dat_result$est_contrast, type = "b", yaxt = "n", xaxt = "n", ylim = c(0,1), xlab = "Whether engaged in self-regulatory strategies on block j", ylab = "Prevalance of tobacco use on block j")
+plot(dat_result$engaged, dat_result$est_contrast, type = "b", yaxt = "n", xaxt = "n", ylim = c(0,1), xlab = "Whether engaged in self-regulatory strategies on block j", ylab = "Prevalance of cigarette use on block j")
 axis(1, at = c(0,1))
 axis(2, at = seq(0,1,0.2))
 lines(dat_result$engaged, dat_result$LB, type = "b", lty = 2)
@@ -113,22 +153,21 @@ lines(dat_result$engaged, dat_result$UB, type = "b", lty = 2)
 ```
 
 
-# Time-varying association between engagement in self-regulatory strategies and tobacco use on current person-block
+# Time-varying association between engagement in self-regulatory strategies and cigarette use on current person-block
 
 $$
-\text{logit} Pr\left(\text{ANY TOBACCO USE}_{i} \left(t_{i,j} \right) = 1\right)= \beta_0 \left(t_{i,j}\right) + \beta_1 \left(t_{i,j}\right) \text{WHETHER ENGAGED} \left(t_{i,j}\right)
+\text{logit} Pr\left(\text{ANY CIGARETTE USE}_{i} \left(t_{i,j} \right) = 1\right)= \beta_0 \left(t_{i,j}\right) + \beta_1 \left(t_{i,j}\right) \text{WHETHER ENGAGED} \left(t_{i,j}\right)
 $$
 ```{r}
 dat_tvem <- dat_logreg
 ```
-
 
 ```{r}
 list_collect_metrics <- list()
 
 for(current_num_knots in 1:3){
   model_tvem <- tvem(data=dat_tvem,
-                     formula=substance_is_any_nicotine ~ Y,
+                     formula=substance_is_cigarettes ~ Y,
                      id=participant_id,
                      time=decision_point,
                      invar_effects=NULL,
@@ -148,7 +187,7 @@ for(current_num_knots in 1:3){
 dat_all_metrics <- bind_rows(list_collect_metrics)
 
 model_tvem <- tvem(data=dat_tvem,
-                   formula=substance_is_any_nicotine ~ Y,
+                   formula=substance_is_cigarettes ~ Y,
                    id=participant_id,
                    time=decision_point,
                    invar_effects=NULL,
@@ -161,7 +200,7 @@ model_tvem <- tvem(data=dat_tvem,
 plot(model_tvem)
 ```
 
-# Marginal association between engagement in self-regulatory strategies and tobacco use on next person-block
+# Marginal association between engagement in self-regulatory strategies and cigarette use on next person-block
 
 $$
 \mathrm{logit} Pr \left( S_{i,j + 1} = 1 \Big| \left\{I_{i, j} = 1\right\} \cap \left\{I_{i, j+1} = 1\right\} \right) = \beta_0 + \beta_1 \text{WHETHER ENGAGED}_{i,j} + \beta_2 S_{i, j}
@@ -170,79 +209,50 @@ $$
 ```{r}
 dat_logreg <- dat_for_analysis %>% 
   filter((eligibility == 1) & (eligibility_lead1 == 1)) %>% 
-  select(participant_id, decision_point, substance_is_any_nicotine_lead1, substance_is_any_nicotine, Y) %>%
+  select(participant_id, decision_point, substance_is_cigarettes_lead1, substance_is_cigarettes, Y) %>%
   mutate(drop_row = if_else(!complete.cases(.), 1, 0)) %>%
   filter(drop_row == 0)
 ```
 
 ```{r}
-fit <- geeglm(substance_is_any_nicotine_lead1 ~ Y + substance_is_any_nicotine, family = "binomial", data = dat_logreg, id = participant_id, waves = decision_point)
-
-summary(fit)
-```
-
-# Estimate the prevalence
-
-```{r}
-dat_logreg <- dat_for_analysis %>% 
-  filter((eligibility == 1) & (eligibility_lead1 == 1)) %>% 
-  select(participant_id, decision_point, substance_is_any_nicotine_lead1, substance_is_any_nicotine, Y) %>%
-  mutate(drop_row = if_else(!complete.cases(.), 1, 0)) %>%
-  filter(drop_row == 0)
+fit <- geeglm(substance_is_cigarettes_lead1 ~ Y + substance_is_cigarettes, family = "binomial", data = dat_logreg, id = participant_id, waves = decision_point)
 ```
 
 ```{r}
-fit <- geeglm(substance_is_any_nicotine_lead1 ~ Y, family = "binomial", data = dat_logreg, id = participant_id, waves = decision_point)
+dat_results <- summary(fit)[["coefficients"]]
+dat_results[["LB95"]] <- dat_results$Estimate - qnorm(0.975) * dat_results$Std.err
+dat_results[["UB95"]] <- dat_results$Estimate + qnorm(0.975) * dat_results$Std.err
 
-summary(fit)
+dat_results_logodds_scale <- dat_results
+dat_results_logodds_scale %>% round(., 3)
+
+# Format output to 3 decimal places
+dat_results_logodds_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "block_level_log_odds_scale_lagged.csv"), row.names = TRUE)
 ```
 
 ```{r}
-Lmat <- matrix(c(1,0,
-                 1,1), ncol = 2, byrow = TRUE)
+dat_results_odds_scale <- data.frame(estimate = expit(dat_results$Estimate), LB95 = expit(dat_results[["LB95"]]), UB95 = expit(dat_results[["UB95"]]))
+dat_results_odds_scale %>% round(., 3)
 
-est_contrast <- Lmat %*% as.matrix(fit$coefficients)
-est_vcov_contrast <- Lmat %*% vcov(fit) %*% t(Lmat)
-est_stderr_contrast <- sqrt(diag(est_vcov_contrast))
-LB95 <- est_contrast - qnorm(0.975) * est_stderr_contrast
-UB95 <- est_contrast + qnorm(0.975) * est_stderr_contrast
-
-expit <- function(x){
-  exp(x)/(1 + exp(x))
-}
-
-dat_result <- data.frame(engaged = c(0,1), est_contrast = expit(est_contrast), LB95 = expit(LB95), UB95 = expit(UB95))
+# Format output to 3 decimal places
+dat_results_odds_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "block_level_odds_scale_lagged.csv"), row.names = TRUE)
 ```
 
-```{r}
-print(dat_result)
-```
-
-```{r, fig.height = 5, fig.width = 7}
-plot(dat_result$engaged, dat_result$est_contrast, type = "b", yaxt = "n", xaxt = "n", ylim = c(0,1), xlab = "Whether engaged in self-regulatory strategies on block j", ylab = "Prevalance of tobacco use on block j+1")
-axis(1, at = c(0,1))
-axis(2, at = seq(0,1,0.2))
-lines(dat_result$engaged, dat_result$LB, type = "b", lty = 2)
-lines(dat_result$engaged, dat_result$UB, type = "b", lty = 2)
-```
-
-# Time-varying association between engagement in self-regulatory strategies and tobacco use on current person-block
+# Time-varying association between engagement in self-regulatory strategies and cigarette use on current person-block
 
 $$
-\text{logit} Pr\left(\text{ANY TOBACCO USE}_{i} \left(t_{i,j+1} \right) = 1\right)= \beta_0 \left(t_{i,j}\right) + \beta_1 \left(t_{i,j}\right) \text{WHETHER ENGAGED} \left(t_{i,j}\right) + \text{ANY TOBACCO USE}_{i} \left(t_{i,j} \right)
+\text{logit} Pr\left(\text{ANY CIGARETTE USE}_{i} \left(t_{i,j+1} \right) = 1\right)= \beta_0 \left(t_{i,j}\right) + \beta_1 \left(t_{i,j}\right) \text{WHETHER ENGAGED} \left(t_{i,j}\right) + \text{ANY CIGARETTE USE}_{i} \left(t_{i,j} \right)
 $$
-
 ```{r}
 dat_tvem <- dat_logreg
 ```
-
 
 ```{r}
 list_collect_metrics <- list()
 
 for(current_num_knots in 1:3){
   model_tvem <- tvem(data=dat_tvem,
-                     formula=substance_is_any_nicotine_lead1 ~ Y + substance_is_any_nicotine,
+                     formula=substance_is_cigarettes_lead1 ~ Y + substance_is_cigarettes,
                      id=participant_id,
                      time=decision_point,
                      invar_effects=NULL,
@@ -262,7 +272,7 @@ for(current_num_knots in 1:3){
 dat_all_metrics <- bind_rows(list_collect_metrics)
 
 model_tvem <- tvem(data=dat_tvem,
-                   formula=substance_is_any_nicotine_lead1 ~ Y + substance_is_any_nicotine,
+                   formula=substance_is_cigarettes_lead1 ~ Y + substance_is_cigarettes,
                    id=participant_id,
                    time=decision_point,
                    invar_effects=NULL,
@@ -274,5 +284,3 @@ model_tvem <- tvem(data=dat_tvem,
 
 plot(model_tvem)
 ```
-
-
