--- a/analysis-complete-case/analysis-H1.Rmd
+++ b/analysis-complete-case/analysis-H1.Rmd
@@ -71,6 +71,33 @@ dat_for_analysis <- dat_primary_aim %>%
          baseline_tobacco_history, has_partner, income_val)
 ```
 
+## Estimated prevalence by group (marginal over time)
+
+```{r}
+dat_prevalence <- dat_for_analysis %>%
+  filter(eligibility == 1) %>%
+  group_by(coinflip) %>%
+  summarise(mu_Y = mean(Y, na.rm = TRUE)) %>%
+  arrange(desc(coinflip))
+
+dat_prevalence
+```
+
+```{r}
+# Format output to 3 decimal places
+dat_prevalence %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "prevalence_by_group_H1.csv"), row.names = TRUE)
+```
+
+```{r, fig.width = 4, fig.height = 8}
+dat_prevalence %>%
+  arrange(mu_Y) %>%
+  mutate(coinflip_factor = if_else(coinflip == 0, "No Prompt", "Prompt")) %>%
+  mutate(coinflip_factor = as_factor(coinflip_factor)) %>%
+  ggplot(aes(x = coinflip_factor, y = mu_Y)) + geom_bar(stat="identity", color="black", fill="#56B4E9", size = 2) + scale_x_discrete(name="Treatment Assignment") + scale_y_continuous(name="Proportion engaged with self-regulatory strategies ~1 hour after micro-randomization", limits=c(0,1), breaks = seq(0,1,0.10)) + theme(legend.position = "none") + geom_text(aes(label=round(mu_Y, 2)), vjust=-0.3, size=6)
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H1", "prevalence.png"), dpi = 1200)
+```
+
 ```{r}
 my_list <- list(Y = -1,
                 coinflip = -1,
@@ -252,23 +279,6 @@ dat_result <- rbind(dat_result_causal, dat_result_control)
 dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "risk_difference_scale_H1.csv"), row.names = TRUE)
 ```
 
-## Estimated prevalence by group (marginal over time)
-
-```{r}
-dat_prevalence <- dat_for_analysis %>%
-  filter(eligibility == 1) %>%
-  group_by(coinflip) %>%
-  summarise(mu_Y = mean(Y)) %>%
-  arrange(desc(coinflip))
-
-dat_prevalence
-```
-
-```{r}
-# Format output to 3 decimal places
-dat_prevalence %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "prevalence_by_group_H1.csv"), row.names = TRUE)
-```
-
 # Exploratory Analysis (Linear Effect of Time)
 
 ## Day in study
@@ -296,6 +306,42 @@ dat_result <- rbind(dat_result_causal, dat_result_control)
 
 # Format output to 3 decimal places
 dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_linear_day.csv"), row.names = TRUE)
+```
+
+```{r, fig.width = 8, fig.height = 12}
+Lmat <- matrix(c(rep(1,8), seq(2,9,1)), byrow = FALSE, ncol = 2)
+dat_result_for_plotting <- summary(fit2, show_control_fit = FALSE, lincomb = Lmat)[["causal_excursion_effect"]]
+dat_result_for_plotting <- dat_result_for_plotting[-c(1,2),]
+dat_result_for_plotting <- as.data.frame(dat_result_for_plotting)
+dat_result_for_plotting$days_since_start <- 2:9
+
+dat_result_for_plotting %>% 
+  ggplot(aes(x=days_since_start, y=Estimate, color="red")) + geom_hline(yintercept=0, linetype=1, color = "black", size=1) + geom_point(size = 2) + geom_line(linewidth=1) + geom_ribbon(aes(ymin=`95% LCL`, ymax=`95% UCL`), linetype=3, linewidth=1, alpha=0.2) + scale_x_continuous(name="Day (t)", limits=c(2, 9), breaks = seq(2,9,1)) + scale_y_continuous(name="Estimate on log scale", limits=c(-1.5,1.0), breaks = seq(-1.5,1.0,0.10)) + theme(legend.position = "none") 
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_linear.png"), dpi = 1200)
+```
+
+```{r, fig.width = 8, fig.height = 12}
+Lmat <- matrix(c(rep(1,8), seq(2,9,1)), byrow = FALSE, ncol = 2)
+dat_result_for_plotting <- summary(fit2, show_control_fit = FALSE, lincomb = Lmat)[["causal_excursion_effect"]]
+dat_result_for_plotting <- dat_result_for_plotting[-c(1,2),]
+dat_result_for_plotting <- as.data.frame(dat_result_for_plotting)
+dat_result_for_plotting$Estimate <- exp(dat_result_for_plotting$Estimate)
+dat_result_for_plotting$`95% LCL` <- exp(dat_result_for_plotting$`95% LCL`)
+dat_result_for_plotting$`95% UCL` <- exp(dat_result_for_plotting$`95% UCL`)
+dat_result_for_plotting$days_since_start <- 2:9
+
+dat_result_for_plotting %>% 
+  ggplot(aes(x=days_since_start, y=Estimate, color="red")) + geom_hline(yintercept=1, linetype=1, color = "black", size=1) + geom_point(size = 2) + geom_line(linewidth=1) + geom_ribbon(aes(ymin=`95% LCL`, ymax=`95% UCL`), linetype=3, linewidth=1, alpha=0.2) + scale_x_continuous(name="Day (t)", limits=c(2,9), breaks = seq(2,9,1)) + scale_y_continuous(name="Estimate on risk ratio scale", limits=c(0,2), breaks = seq(0,2,0.10)) + theme(legend.position = "none") 
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H1", "risk_ratio_scale_H1_linear.png"), dpi = 1200)
+```
+
+```{r, fig.width = 8, fig.height = 6}
+dat_result_for_plotting %>% 
+  ggplot(aes(x=days_since_start, y=Estimate, color="red")) + geom_hline(yintercept=1, linetype=1, color = "black", size=2) + geom_point(size = 4) + geom_line(linewidth=2) + geom_ribbon(aes(ymin=`95% LCL`, ymax=`95% UCL`), linetype=3, linewidth=2, alpha=0.2) + scale_x_continuous(name="Day (t)", limits=c(2,9), breaks = seq(2,9,1)) + scale_y_continuous(name="Estimate on risk ratio scale", limits=c(0.7,1.5), breaks = seq(0.7,1.5,0.10)) + theme(legend.position = "none") 
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H1", "zoomed_risk_ratio_scale_H1_linear.png"), dpi = 1200)
 ```
 
 ## Hour of day
@@ -354,6 +400,35 @@ dat_result <- rbind(dat_result_causal, dat_result_control)
 dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_quadratic_day.csv"), row.names = TRUE)
 ```
 
+```{r, fig.width = 8, fig.height = 12}
+Lmat <- matrix(c(rep(1,8), seq(2,9,1), seq(2,9,1)), byrow = FALSE, ncol = 3)
+dat_result_for_plotting <- summary(fit3, show_control_fit = FALSE, lincomb = Lmat)[["causal_excursion_effect"]]
+dat_result_for_plotting <- dat_result_for_plotting[-c(1:3),]
+dat_result_for_plotting <- as.data.frame(dat_result_for_plotting)
+dat_result_for_plotting$days_since_start <- 2:9
+
+dat_result_for_plotting %>% 
+  ggplot(aes(x=days_since_start, y=Estimate, color="red")) + geom_hline(yintercept=0, linetype=1, color = "black", size=1) + geom_point(size = 2) + geom_line(linewidth=1) + geom_ribbon(aes(ymin=`95% LCL`, ymax=`95% UCL`), linetype=3, linewidth=1, alpha=0.2) + scale_x_continuous(name="Day (t)", limits=c(2, 9), breaks = seq(2,9,1)) + scale_y_continuous(name="Estimate on log scale", limits=c(-1.5,1.0), breaks = seq(-1.5,1.0,0.10)) + theme(legend.position = "none") 
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_quadratic.png"), dpi = 1200)
+```
+
+```{r, fig.width = 8, fig.height = 12}
+Lmat <- matrix(c(rep(1,8), seq(2,9,1), seq(2,9,1)), byrow = FALSE, ncol = 3)
+dat_result_for_plotting <- summary(fit3, show_control_fit = FALSE, lincomb = Lmat)[["causal_excursion_effect"]]
+dat_result_for_plotting <- dat_result_for_plotting[-c(1:3),]
+dat_result_for_plotting <- as.data.frame(dat_result_for_plotting)
+dat_result_for_plotting$Estimate <- exp(dat_result_for_plotting$Estimate)
+dat_result_for_plotting$`95% LCL` <- exp(dat_result_for_plotting$`95% LCL`)
+dat_result_for_plotting$`95% UCL` <- exp(dat_result_for_plotting$`95% UCL`)
+dat_result_for_plotting$days_since_start <- 2:9
+
+dat_result_for_plotting %>% 
+  ggplot(aes(x=days_since_start, y=Estimate, color="red")) + geom_hline(yintercept=1, linetype=1, color = "black", size=1) + geom_point(size = 2) + geom_line(linewidth=1) + geom_ribbon(aes(ymin=`95% LCL`, ymax=`95% UCL`), linetype=3, linewidth=1, alpha=0.2) + scale_x_continuous(name="Day (t)", limits=c(2,9), breaks = seq(2,9,1)) + scale_y_continuous(name="Estimate on risk ratio scale", limits=c(0,2), breaks = seq(0,2,0.10)) + theme(legend.position = "none") 
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H1", "risk_ratio_scale_H1_quadratic.png"), dpi = 1200)
+```
+
 ## Hour of day
 
 ```{r}
@@ -392,6 +467,23 @@ dat_for_analysis <- dat_primary_aim %>%
          hour_coinflip_local, days_between_v1_and_coinflip_local,
          any_response_2qs, any_recent_eligible_dp, engagement_most_recent_eligible,
          age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other, baseline_tobacco_history, has_partner, income_val)
+```
+
+## Estimated prevalence by group
+
+```{r}
+dat_prevalence <- dat_for_analysis %>%
+  filter(eligibility == 1) %>%
+  group_by(coinflip) %>%
+  summarise(mu_Y = mean(Y, na.rm = TRUE)) %>%
+  arrange(desc(coinflip))
+
+dat_prevalence
+```
+
+```{r}
+# Format output to 3 decimal places
+dat_prevalence %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "sensitivity_prevalence_by_group_H1.csv"), row.names = TRUE)
 ```
 
 ```{r}
@@ -570,22 +662,5 @@ dat_result <- rbind(dat_result_causal, dat_result_control)
 
 # Format output to 3 decimal places
 dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "sensitivity_risk_difference_scale_H1.csv"), row.names = TRUE)
-```
-
-## Estimated prevalence by group
-
-```{r}
-dat_prevalence <- dat_for_analysis %>%
-  filter(eligibility == 1) %>%
-  group_by(coinflip) %>%
-  summarise(mu_Y = mean(Y)) %>%
-  arrange(desc(coinflip))
-
-dat_prevalence
-```
-
-```{r}
-# Format output to 3 decimal places
-dat_prevalence %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "sensitivity_prevalence_by_group_H1.csv"), row.names = TRUE)
 ```
 
