Update imputation pipeline.

--- a/analysis-complete-case/analysis-H2.Rmd
+++ b/analysis-complete-case/analysis-H2.Rmd
@@ -696,7 +696,7 @@ fit1 <- emee_categorical_trt_with_Delta(
   decision_time_varname = "decision_point",
   treatment_varname = "treatment_cate",
   outcome_varname = "Y",
-  control_varname = c("age", "is_male", "is_latino", "is_not_latino_and_black", "is_not_latino_and_other", "baseline_tobacco_history", "has_partner", "income_val", "hour_coinflip_local", "days_between_v1_and_coinflip_local", "any_response_2qs", "any_recent_eligible_dp", "engagement_most_recent_eligible", "days_between_v1_and_coinflip_local_squared"),
+  control_varname = c("age", "is_male", "is_latino", "is_not_latino_and_black", "is_not_latino_and_other", "baseline_tobacco_history", "has_partner", "income_val", "hour_coinflip_local", "days_between_v1_and_coinflip_local", "days_between_v1_and_coinflip_local_squared", "any_response_2qs", "any_recent_eligible_dp", "engagement_most_recent_eligible"),
   moderator_varname = c("days_between_v1_and_coinflip_local", "days_between_v1_and_coinflip_local_squared"),
   rand_prob_varname = "rand_prob",
   rand_prob_A0_varname = "rand_prob_A0",
@@ -860,7 +860,7 @@ fit1 <- emee_categorical_trt_with_Delta(
   decision_time_varname = "decision_point",
   treatment_varname = "treatment_cate",
   outcome_varname = "Y",
-  control_varname = c("age", "is_male", "is_latino", "is_not_latino_and_black", "is_not_latino_and_other", "baseline_tobacco_history", "has_partner", "income_val", "hour_coinflip_local", "days_between_v1_and_coinflip_local", "any_response_2qs", "any_recent_eligible_dp", "engagement_most_recent_eligible", "hour_coinflip_local_squared"),
+  control_varname = c("age", "is_male", "is_latino", "is_not_latino_and_black", "is_not_latino_and_other", "baseline_tobacco_history", "has_partner", "income_val", "hour_coinflip_local", "hour_coinflip_local_squared", "days_between_v1_and_coinflip_local", "any_response_2qs", "any_recent_eligible_dp", "engagement_most_recent_eligible"),
   moderator_varname = c("hour_coinflip_local", "hour_coinflip_local_squared"),
   rand_prob_varname = "rand_prob",
   rand_prob_A0_varname = "rand_prob_A0",
